prometheus/monitor-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitor-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: public
spec:
  rules:
  - host: grafana.cgrpi.ml
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port: 
              number: 3000
